// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList component renders correctly 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper link-button-list-wrapper "
  >
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
        }
      }
      dataLocator="moduleN_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Girl"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
        }
      }
      dataLocator="moduleN_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Girl alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Toddler Girl title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Toddler_Girl"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Boy",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Boy",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Boy"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
        }
      }
      dataLocator="moduleN_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Boy alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Tod Boy title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Tod_Boy"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_4"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Baby"
    />
    <ButtonCTA
      className="link-button-wrapper-class"
      ctaInfo={
        Object {
          "className": "link-button",
          "ctaVariation": "category-links-dark",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_5"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Alt"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly for Dual Variation 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper stacked-button-list-wrapper  wrapped-button-text is-tablet-hidden"
  >
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
        }
      }
      dataLocator="moduleB_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Girl"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
        }
      }
      dataLocator="moduleB_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Girl alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Toddler Girl title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Toddler_Girl"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
        }
      }
      dataLocator="moduleB_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Boy",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Boy",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Boy"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
        }
      }
      dataLocator="moduleB_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Boy alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Tod Boy title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Tod_Boy"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleB_cta_links_4"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Baby"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleB_cta_links_5"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Alt"
    />
  </div>
  <Styled(DropDownButton)
    buttonsData={
      Array [
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
          "image": Object {
            "alt": "Toddler Girl alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Toddler Girl title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
          "image": Object {
            "alt": "Boy",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Boy",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
          "image": Object {
            "alt": "Toddler Boy alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Tod Boy title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
          "image": Object {
            "alt": "Baby Alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Baby title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
          "image": Object {
            "alt": "Baby Alt",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Baby title",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
      ]
    }
    className=" additional-button-list hide-on-small-viewport"
    dataLocatorItemPrefix="moduleB_cta_links_"
    dropdownLabel="Shop Now"
  />
</Fragment>
`;

exports[`ButtonList component renders correctly for image cta List 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper scroll-button-list-wrapper   wrapped-button-text "
  >
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
        }
      }
      dataLocator="moduleN_image_0"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Girl"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
        }
      }
      dataLocator="moduleN_image_1"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Girl alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Toddler Girl title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Toddler_Girl"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
        }
      }
      dataLocator="moduleN_image_2"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Boy",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Boy",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Boy"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
        }
      }
      dataLocator="moduleN_image_3"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Boy alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Tod Boy title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Tod_Boy"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_image_4"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Baby"
    />
    <ImageTextCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "image-cta",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_image_5"
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Alt"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly for scroll cta buttons 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper scroll-button-list-wrapper   wrapped-button-text "
  >
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
        }
      }
      dataLocator="moduleN_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Girl"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
        }
      }
      dataLocator="moduleN_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Girl alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Toddler Girl title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Toddler_Girl"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Boy",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Boy",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Boy"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
        }
      }
      dataLocator="moduleN_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Boy alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Tod Boy title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Tod_Boy"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_4"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Baby"
    />
    <ButtonCTA
      className="scroll-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "scroll-button",
          "ctaVariation": "variable-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_5"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      textAlign="center"
      uniqueKey="Alt"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly with props for stacked CTA buttons 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper stacked-button-list-wrapper  wrapped-button-text "
  >
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
        }
      }
      dataLocator="moduleN_cta_links_0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Girl"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
        }
      }
      dataLocator="moduleN_cta_links_1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Girl alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Toddler Girl title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Toddler_Girl"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Boy",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Boy",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Boy"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
        }
      }
      dataLocator="moduleN_cta_links_3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Boy alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Tod Boy title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Tod_Boy"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_4"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Baby"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="moduleN_cta_links_5"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Alt"
    />
  </div>
</Fragment>
`;

exports[`ButtonList component renders correctly without props 1`] = `
<Fragment>
  <div
    className=" button-list-wrapper stacked-button-list-wrapper  wrapped-button-text "
  >
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Girl",
            "title": "Girl",
            "url": "/girl",
          },
        }
      }
      dataLocator="0"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Girl",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Girl",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Girl"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Girl",
            "title": "Toddler Girl",
            "url": "/toddler-girl",
          },
        }
      }
      dataLocator="1"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Girl alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Toddler Girl title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Toddler_Girl"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Boy",
            "title": "Boy",
            "url": "/boy",
          },
        }
      }
      dataLocator="2"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Boy",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Boy",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Boy"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Toddler Boy",
            "title": "Tod Boy",
            "url": "/toddler-boy2",
          },
        }
      }
      dataLocator="3"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Toddler Boy alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Tod Boy title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Tod_Boy"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Baby",
            "title": "Baby",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="4"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Baby"
    />
    <ButtonCTA
      className="stacked-cta-wrapper-class"
      ctaInfo={
        Object {
          "className": "stacked-button",
          "ctaVariation": "fixed-width",
          "link": Object {
            "external": 0,
            "target": "",
            "text": "Alt",
            "title": "Alt",
            "url": "/toddler-boy",
          },
        }
      }
      dataLocator="5"
      dataLocatorCTA=""
      fill=""
      fontFamily="secondary"
      fontSize="fs13"
      fontWeight="extrabold"
      image={
        Object {
          "alt": "Baby Alt",
          "crop_d": "",
          "crop_m": "",
          "crop_t": "",
          "title": "Baby title",
          "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
        }
      }
      noCurveMobile={true}
      textAlign="center"
      uniqueKey="Alt"
    />
  </div>
</Fragment>
`;
